--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,6 @@
 	<artifactId>puli</artifactId>
 	<groupId>org.liveontologies</groupId>
 	<version>0.2.0</version>
-	<packaging>jar</packaging>
-
-	<!--	<prerequisites>-->
-	<!--		<maven>3.0.5</maven>-->
-	<!--	</prerequisites>-->
 
 	<name>Proof Utility Library</name>
 	<description>
@@ -84,10 +79,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!--		<pluginId>${project.groupId}.${project.artifactId}</pluginId>-->
 		<java.version>19</java.version>
 		<slf4j.version>2.0.7</slf4j.version>
-		<owlapi4.version>4.5.25-komet-module</owlapi4.version>
 	</properties>
 
 	<dependencies>
@@ -95,12 +88,6 @@
 			<groupId>dev.ikm.jpms</groupId>
 			<artifactId>guava</artifactId>
 			<version>31.1-jre</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.code.findbugs</groupId>
-					<artifactId>jsr305</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -119,282 +106,218 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-api</artifactId>
-			<version>${owlapi4.version}</version>
-		</dependency>
 	</dependencies>
 
-	<!--	<distributionManagement>-->
-	<!--		<snapshotRepository>-->
-	<!--			<id>ossrh</id>-->
-	<!--			<url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
-	<!--		</snapshotRepository>-->
-	<!--	</distributionManagement>-->
-
 	<build>
-		<!--		<pluginManagement>-->
-		<!--			<plugins>-->
-		<!--				This plugin's configuration is used to store Eclipse m2e
-		settings -->
-		<!--					only. It has no influence on the Maven build itself. -->
-		<!--				<plugin>-->
-		<!--					<groupId>org.eclipse.m2e</groupId>-->
-		<!--					<artifactId>lifecycle-mapping</artifactId>-->
-		<!--					<version>1.0.0</version>-->
-		<!--					<configuration>-->
-		<!--						<lifecycleMappingMetadata>-->
-		<!--							<pluginExecutions>-->
-		<!--								<pluginExecution>-->
-		<!--									<pluginExecutionFilter>-->
-		<!--										<groupId>org.codehaus.mojo</groupId>-->
-		<!--										<artifactId>build-helper-maven-plugin</artifactId>-->
-		<!--										<versionRange>[1.0,)</versionRange>-->
-		<!--										<goals>-->
-		<!--											<goal>timestamp-property</goal>-->
-		<!--										</goals>-->
-		<!--									</pluginExecutionFilter>-->
-		<!--									<action>-->
-		<!--										<execute>-->
-		<!--											<runOnConfiguration>true</runOnConfiguration>-->
-		<!--											<runOnIncremental>true</runOnIncremental>-->
-		<!--										</execute>-->
-		<!--									</action>-->
-		<!--								</pluginExecution>-->
-		<!--							</pluginExecutions>-->
-		<!--						</lifecycleMappingMetadata>-->
-		<!--					</configuration>-->
-		<!--				</plugin>-->
-		<!--			</plugins>-->
-		<!--		</pluginManagement>-->
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.3.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-changes-plugin</artifactId>
+					<version>2.12.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.10.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>3.6.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-enforcer-plugin</artifactId>
+					<version>3.0.0-M3</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>3.0.0-M1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.2.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.5.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-project-info-reports-plugin</artifactId>
+					<version>3.1.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.2.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.12.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.3.0</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M5</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>license-maven-plugin</artifactId>
+					<version>2.0.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>versions-maven-plugin</artifactId>
+					<version>2.15.0</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+					<fork>true</fork>
 				</configuration>
 			</plugin>
-			<!--			<plugin>-->
-			<!--				<groupId>org.codehaus.mojo</groupId>-->
-			<!--				<artifactId>animal-sniffer-maven-plugin</artifactId>-->
-			<!--				<version>1.16</version>-->
-			<!--				<configuration>-->
-			<!--					<signature>-->
-			<!--						<groupId>org.codehaus.mojo.signature</groupId>-->
-			<!--						<artifactId>java16</artifactId>-->
-			<!--						<version>1.0</version>-->
-			<!--					</signature>-->
-			<!--				</configuration>-->
-			<!--				<executions>-->
-			<!--					<execution>-->
-			<!--						<id>ensure-java-1.6-class-library</id>-->
-			<!--						<phase>test</phase>-->
-			<!--						<goals>-->
-			<!--							<goal>check</goal>-->
-			<!--						</goals>-->
-			<!--					</execution>-->
-			<!--				</executions>-->
-			<!--			</plugin>-->
-			<!--			<plugin>-->
-			<!--				<groupId>org.apache.felix</groupId>-->
-			<!--				<artifactId>maven-bundle-plugin</artifactId>-->
-			<!--				<version>3.3.0</version>-->
-			<!--				<extensions>true</extensions>-->
-			<!--				<configuration>-->
-			<!--					<instructions>-->
-			<!--
-			<Bundle-SymbolicName>${pluginId};singleton:=true</Bundle-SymbolicName>-->
-			<!--						<Bundle-Vendor>${project.organization.name}</Bundle-Vendor>-->
-			<!--					</instructions>-->
-			<!--					<executions>-->
-			<!--						<execution>-->
-			<!--							<id>bundle-manifest</id>-->
-			<!--							<phase>install</phase>-->
-			<!--							<goals>-->
-			<!--								<goal>manifest</goal>-->
-			<!--							</goals>-->
-			<!--						</execution>-->
-			<!--					</executions>-->
-			<!--				</configuration>-->
-			<!--			</plugin>-->
-			<!--			<plugin>-->
-			<!--				 the plugin used to generate license headers -->
-			<!--				<groupId>org.codehaus.mojo</groupId>-->
-			<!--				<artifactId>license-maven-plugin</artifactId>-->
-			<!--				<version>1.14</version>-->
-			<!--				<configuration>-->
-			<!--					<verbose>false</verbose>-->
-			<!--					<addSvnKeyWords>true</addSvnKeyWords>-->
-			<!--					<extraExtensions>-->
-			<!--						<g>java</g>-->
-			<!--						<jj>java</jj>-->
-			<!--					</extraExtensions>-->
-			<!--				</configuration>-->
-			<!--				<executions>-->
-			<!--					<execution>-->
-			<!--						<id>first</id>-->
-			<!--						<goals>-->
-			<!--							<goal>update-file-header</goal>-->
-			<!--							<goal>update-project-license</goal>-->
-			<!--						</goals>-->
-			<!--						<phase>package</phase>-->
-			<!--						<configuration>-->
-			<!--							<licenseName>apache_v2</licenseName>-->
-			<!--							<roots>-->
-			<!--								<root>src/main/java</root>-->
-			<!--								<root>src/test/java</root>-->
-			<!--							</roots>-->
-			<!--						</configuration>-->
-			<!--					</execution>-->
-			<!--				</executions>-->
-			<!--			</plugin>-->
-			<!--			<plugin>-->
-			<!--				<groupId>org.codehaus.mojo</groupId>-->
-			<!--				<artifactId>build-helper-maven-plugin</artifactId>-->
-			<!--				<version>3.0.0</version>-->
-			<!--				<executions>-->
-			<!--					<execution>-->
-			<!--						 retrive the current year from the build timestamp, used
-			in README.txt -->
-			<!--						<id>set-current-year</id>-->
-			<!--						<goals>-->
-			<!--							<goal>timestamp-property</goal>-->
-			<!--						</goals>-->
-			<!--						<configuration>-->
-			<!--							<name>currentYear</name>-->
-			<!--							<pattern>yyyy</pattern>-->
-			<!--						</configuration>-->
-			<!--					</execution>-->
-			<!--				</executions>-->
-			<!--			</plugin>-->
-			<!--			<plugin>-->
-			<!--				 filtering and copying of additional files; these will
-			*not*-->
-			<!--				be included -->
-			<!--					in the jar -->
-			<!--				<artifactId>maven-resources-plugin</artifactId>-->
-			<!--				<version>3.0.2</version>-->
-			<!--				<executions>-->
-			<!--					<execution>-->
-			<!--						<id>filter-main-resources</id>-->
-			<!--						<phase>package</phase>-->
-			<!--						<goals>-->
-			<!--							<goal>copy-resources</goal>-->
-			<!--						</goals>-->
-			<!--						<configuration>-->
-			<!--							<outputDirectory>${basedir}</outputDirectory>-->
-			<!--							<resources>-->
-			<!--								<resource>-->
-			<!--									<directory>src/main/resources</directory>-->
-			<!--									<filtering>true</filtering>-->
-			<!--									<includes>-->
-			<!--										<include>README.txt</include>-->
-			<!--									</includes>-->
-			<!--								</resource>-->
-			<!--							</resources>-->
-			<!--						</configuration>-->
-			<!--					</execution>-->
-			<!--				</executions>-->
-			<!--			</plugin>-->
-			<!-- deplyoing to maven central -->
-			<!--			<plugin>-->
-			<!--				<groupId>org.sonatype.plugins</groupId>-->
-			<!--				<artifactId>nexus-staging-maven-plugin</artifactId>-->
-			<!--				<version>1.6.8</version>-->
-			<!--				<extensions>true</extensions>-->
-			<!--				<configuration>-->
-			<!--					<serverId>ossrh</serverId>-->
-			<!--					<nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
-			<!--					<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
-			<!--				</configuration>-->
-			<!--			</plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>analyze</id>
+						<goals>
+							<goal>analyze-only</goal>
+						</goals>
+						<configuration>
+							<ignoreUnusedRuntime>true</ignoreUnusedRuntime>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<configuration>
+					<verbose>false</verbose>
+					<addSvnKeyWords>true</addSvnKeyWords>
+					<extraExtensions>
+						<g>java</g>
+						<jj>java</jj>
+					</extraExtensions>
+				</configuration>
+				<executions>
+					<execution>
+						<id>first</id>
+						<goals>
+							<goal>update-file-header</goal>
+							<goal>update-project-license</goal>
+						</goals>
+						<phase>process-sources</phase>
+						<configuration>
+							<licenseName>apache_v2</licenseName>
+							<roots>
+								<root>src/main/java</root>
+								<root>src/test/java</root>
+							</roots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
-	<!--	<profiles>-->
-	<!--		<profile>-->
-	<!--			 put META-INF/MANIFEST.MF so that Eclipse/PDE can find it; to use -->
-	<!--				in Eclipse right click on the project > Configure > Convert to
-	Plug-in Projects... -->
-	<!--			<id>eclipse</id>-->
-	<!--			<build>-->
-	<!--				<plugins>-->
-	<!--					<plugin>-->
-	<!--						<groupId>org.apache.felix</groupId>-->
-	<!--						<artifactId>maven-bundle-plugin</artifactId>-->
-	<!--						<extensions>true</extensions>-->
-	<!--						<configuration>-->
-	<!--							<manifestLocation>META-INF</manifestLocation>-->
-	<!--						</configuration>-->
-	<!--					</plugin>-->
-	<!--				</plugins>-->
-	<!--			</build>-->
-	<!--		</profile>-->
-	<!--		<profile>-->
-	<!--			<id>java8-doclint-disabled</id>-->
-	<!--			<activation>-->
-	<!--				<jdk>[1.8,)</jdk>-->
-	<!--			</activation>-->
-	<!--			<properties>-->
-	<!--				 javadoc of JDK8 fail on many warnings -->
-	<!--				<javadoc.opts>-Xdoclint:none</javadoc.opts>-->
-	<!--			</properties>-->
-	<!--		</profile>-->
-	<!--		<profile>-->
-	<!--			<id>release</id>-->
-	<!--			<build>-->
-	<!--				<plugins>-->
-	<!--					<plugin>-->
-	<!--						<groupId>org.apache.maven.plugins</groupId>-->
-	<!--						<artifactId>maven-source-plugin</artifactId>-->
-	<!--						<version>3.0.1</version>-->
-	<!--						<executions>-->
-	<!--							<execution>-->
-	<!--								<id>attach-sources</id>-->
-	<!--								<goals>-->
-	<!--									<goal>jar-no-fork</goal>-->
-	<!--								</goals>-->
-	<!--							</execution>-->
-	<!--						</executions>-->
-	<!--					</plugin>-->
-	<!--					<plugin>-->
-	<!--						<groupId>org.apache.maven.plugins</groupId>-->
-	<!--						<artifactId>maven-javadoc-plugin</artifactId>-->
-	<!--						<version>3.0.0-M1</version>-->
-	<!--						<executions>-->
-	<!--							<execution>-->
-	<!--								<id>attach-javadocs</id>-->
-	<!--								<goals>-->
-	<!--									<goal>jar</goal>-->
-	<!--								</goals>-->
-	<!--								<configuration>-->
-	<!--									<additionalparam>${javadoc.opts}</additionalparam>-->
-	<!--								</configuration>-->
-	<!--							</execution>-->
-	<!--						</executions>-->
-	<!--					</plugin>-->
-	<!--					<plugin>-->
-	<!--						<groupId>org.apache.maven.plugins</groupId>-->
-	<!--						<artifactId>maven-gpg-plugin</artifactId>-->
-	<!--						<version>1.6</version>-->
-	<!--						<executions>-->
-	<!--							<execution>-->
-	<!--								<id>sign-artifacts</id>-->
-	<!--								<phase>verify</phase>-->
-	<!--								<goals>-->
-	<!--									<goal>sign</goal>-->
-	<!--								</goals>-->
-	<!--							</execution>-->
-	<!--						</executions>-->
-	<!--					</plugin>-->
-	<!--				</plugins>-->
-	<!--			</build>-->
-	<!--		</profile>-->
-	<!--	</profiles>-->
-
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<doclint>none</doclint>
+				</configuration>
+				<reportSets>
+					<reportSet>
+						<id>aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>aggregate-no-fork</report>
+						</reports>
+					</reportSet>
+					<!--					<reportSet>-->
+					<!--						<id>default</id>-->
+					<!--						<reports>-->
+					<!--							<report>javadoc</report>-->
+					<!--						</reports>-->
+					<!--					</reportSet>-->
+					<reportSet>
+						<id>test-aggregate</id>
+						<configuration>
+							<skip>true</skip>
+						</configuration>
+						<reports>
+							<report>test-aggregate-no-fork</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>dependency-updates-report</report>
+							<report>plugin-updates-report</report>
+							<report>property-updates-report</report>
+						</reports>
+					</reportSet>
+					<reportSet>
+						<id>aggregate</id>
+						<inherited>false</inherited>
+						<reports>
+							<report>dependency-updates-aggregate-report</report>
+							<report>plugin-updates-aggregate-report</report>
+							<report>property-updates-aggregate-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
