--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<artifactId>puli</artifactId>
 	<groupId>org.liveontologies</groupId>
-	<version>0.2.0</version>
+	<version>0.2.1-SNAPSHOT</version>
 
 	<name>Proof Utility Library</name>
 	<description>
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>dev.ikm.jpms</groupId>
 			<artifactId>guava</artifactId>
-			<version>31.1-jre</version>
+			<version>31.1-jre-r1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
