--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 		<dependency>
 			<groupId>dev.ikm.jpms</groupId>
 			<artifactId>guava</artifactId>
-			<version>31.1-jre-r1-SNAPSHOT</version>
+			<version>31.1-jre-r1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
