--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<artifactId>puli</artifactId>
 	<groupId>org.liveontologies</groupId>
-	<version>0.2.1-SNAPSHOT</version>
+	<version>0.2.1</version>
 
 	<name>Proof Utility Library</name>
 	<description>
