--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           maven-version: 3.9.0
 
       - name: Maven Build
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         run: |
           mvn clean install \
             -s ${{env.MAVEN_SETTING}} \
@@ -39,7 +39,7 @@ jobs:
             -PcodeQuality
 
       - name: Maven Build -- Feature Branch
-        if: github.ref != 'refs/heads/main'
+        if: github.ref != 'refs/heads/master'
         run: |
           java --version
           mvn clean install \
@@ -65,7 +65,7 @@ jobs:
           java-version: '21'
 
       - name: Maven Build
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         run: |
           mvn clean install \
             --batch-mode \
@@ -74,7 +74,7 @@ jobs:
             -PcodeQuality
 
       - name: Maven Build -- Feature Branch
-        if: github.ref != 'refs/heads/main'
+        if: github.ref != 'refs/heads/master'
         run: |
           java --version
           mvn clean install \
