--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
 # Define environment parameters
 env:
   BRANCH_NAME: ${{github.ref_name}}
-  TRUNK_BRANCH_NAME: main
+  TRUNK_BRANCH_NAME: master
   RELEASE_MESSAGE: ${{github.event.inputs.release_message}}
 
 # Define jobs within the workflow
