updated releasae workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,21 +72,22 @@ jobs:
           # Extract the current numeric suffix
           CURRENT_SUFFIX_NUMBER=$(echo $VERSION_SUFFIX | grep -oE '[0-9]+$')
           
-          # Increment the suffix number
+          # Increment the suffix number for new development version
           NEW_SUFFIX_NUMBER=$((CURRENT_SUFFIX_NUMBER + 1))
           
-          # Form the new version
-          NEW_VERSION="$VERSION_PREFIX-ikm-r$NEW_SUFFIX_NUMBER"
+          # Form the new versions
+          RELEASE_VERSION="$VERSION_PREFIX"
+          NEW_DEV_VERSION="$VERSION_PREFIX-ikm-r$NEW_SUFFIX_NUMBER-SNAPSHOT"
           
-          # Output the new version
-          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
-          echo "RELEASE_VERSION=$CURRENT_VERSION" >> $GITHUB_ENV
+          # Output the new versions
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
+          echo "NEW_DEV_VERSION=$NEW_DEV_VERSION" >> $GITHUB_ENV
 
-      - name: Update Version in pom.xml
+      - name: Set Release Version in pom.xml
         run: |
-          NEW_VERSION=${{ env.NEW_VERSION }}
+          RELEASE_VERSION=${{ env.RELEASE_VERSION }}
           
-          # Update the version in pom.xml
+          # Update the version in pom.xml to release version
           node -e "
           const fs = require('fs');
           const xml2js = require('xml2js');
@@ -97,68 +98,74 @@ jobs:
             if (err) throw err;
             parser.parseString(data, (err, result) => {
               if (err) throw err;
-              result.project.version[0] = '$NEW_VERSION';
+              result.project.version[0] = '$RELEASE_VERSION';
               const xml = builder.buildObject(result);
               fs.writeFile('pom.xml', xml, (err) => {
                 if (err) throw err;
-                console.log('Updated pom.xml with new version: $NEW_VERSION');
+                console.log('Updated pom.xml with release version: $RELEASE_VERSION');
               });
             });
           });
           "
 
-  #Setting versioning for build and tags
-  set_build_and_tag_release_and_set_next_dev_version:
-    name: Set, Build, Tag Release Version & Set Next Version
-    runs-on: self-hosted
-    permissions:
-      contents: write
-
-    steps:
-      - name: Setup Maven Action
-        uses: s4u/setup-maven-action@v1.14.0
-        with:
-          checkout-fetch-depth: 0
-          java-version: 21
-          java-distribution: adopt
-          maven-version: 3.9.0
-
-      - name: Set Release Version
+      - name: Commit Release Version
         run: |
-          mvn -B versions:set \
-          -s ${{env.MAVEN_SETTING}} \
-          -DnewVersion=${{inputs.release_version}} \
-          -DgenerateBackupPoms=false
+          git commit -am "Set release version to ${{ env.RELEASE_VERSION }}"
+          git tag ${{ env.RELEASE_VERSION }}
+          git push origin master --tags
 
       - name: Build Release Version
+        run: mvn clean package
+
+      - name: Set New Development Version in pom.xml
         run: |
-          mvn -version
-          mvn clean install \
-                -s ${{env.MAVEN_SETTING}} \
-                --batch-mode \
-                -e \
-                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
-                -PcodeQuality,release-enforcement
+          NEW_DEV_VERSION=${{ env.NEW_DEV_VERSION }}
+          
+          # Update the version in pom.xml to new development version
+          node -e "
+          const fs = require('fs');
+          const xml2js = require('xml2js');
+          const parser = new xml2js.Parser();
+          const builder = new xml2js.Builder();
+          
+          fs.readFile('pom.xml', (err, data) => {
+            if (err) throw err;
+            parser.parseString(data, (err, result) => {
+              if (err) throw err;
+              result.project.version[0] = '$NEW_DEV_VERSION';
+              const xml = builder.buildObject(result);
+              fs.writeFile('pom.xml', xml, (err) => {
+                if (err) throw err;
+                console.log('Updated pom.xml with new development version: $NEW_DEV_VERSION');
+              });
+            });
+          });
+          "
+
+      - name: Commit New Development Version
+        run: |
+          git commit -am "Set new development version to ${{ env.NEW_DEV_VERSION }}"
+          git push origin master
 
       - name: Create tag
         run: |
           git remote set-url origin https://git:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git
           git config user.name "Cloud User"
           git add .
-          git commit -m 'Release ${{inputs.release_version}}'
-          git tag -a ${{inputs.release_version}} -m '${{inputs.release_version}}' --force
+          git commit -m 'Release ${{release_version}}'
+          git tag -a ${{release_version}} -m '${{release_version}}' --force
 
       - name: Set Dev Version
         run: |
           mvn -B versions:set \
           -s ${{env.MAVEN_SETTING}} \
-          -DnewVersion=${{inputs.new_version}} \
+          -DnewVersion=${{new_version}} \
           -DgenerateBackupPoms=false
 
       - name: Commit & Push
         run: |
           git add .
-          git commit -m 'Set next dev version to ${{inputs.new_version}}'
+          git commit -m 'Set next dev version to ${{new_version}}'
           git push origin HEAD:master
           git push --tags origin
 
