updated releasae workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,11 +3,11 @@ name: Publish Artifacts Workflow
 run-name: 'Publish Artifacts -- ${{github.event.workflow_run.head_branch}}'
 
 on:
-  workflow_run:
-    workflows:
-      - Build Workflow
-    types:
-      - completed
+  #workflow_run:
+    #workflows:
+      #- Build Workflow
+    #types:
+      #- completed
 
 
 jobs:
