updated releasae workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ run-name: 'Build Workflow -- ${{ github.head_ref || github.ref_name }}'
 
 # Workflow trigger
 on:
+  workflow_dispatch:
   #push:
   #pull_request:
 
