Added create & deploy release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   publish-artifacts:
     name: Publish Artifacts
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     #if: github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'ikmdev'
     if: github.repository_owner == 'ikmdev'
 
@@ -48,6 +48,7 @@ jobs:
 
       - name: Deploy To Nexus
         run: |
+          mvn tidy:pom \
           mvn deploy \
              --batch-mode \
              -e \
