Added create & deploy release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,11 +5,11 @@ run-name: 'Publish Artifacts -- ${{github.event.workflow_run.head_branch}}'
 on:
   push:
   pull_request:
-    #workflow_run:
+#    workflow_run:
     #workflows:
       #- Build Workflow
-    types:
-      - completed
+    #types:
+      #- completed
 
 
 jobs:
