Added create & deploy release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,10 @@ jobs:
   #Setting versioning for build and tags
   set_build_and_tag_release_and_set_next_dev_version:
     name: Set, Build, Tag Release Version & Set Next Version
+
+    needs:
+      - release
+
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -93,7 +97,6 @@ jobs:
     steps:
       - name: Build Release Version
         run: |
-          mvn tidy:pom
           mvn clean package
 
       - name: Commit Release Version
